test_workflows/src/workflows/error/type/types.ts
export class FooError extends Error {}
